Fix item pickup missing

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ GI498_Sages/Library/SourceAssetDB
 GI498_Sages/Library/Style.catalog
 GI498_Sages/Packages/manifest.json
 GI498_Sages/Packages/packages-lock.json
+GI498_Sages/Library/ArtifactDB
+GI498_Sages/Library/CurrentLayout-default.dwlt
+GI498_Sages/Library/LastSceneManagerSetup.txt
+GI498_Sages/Library/SceneVisibilityState.asset
+GI498_Sages/Library/SourceAssetDB
