Add Zoom module

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 GI498_Sages/[Ll]ibrary/
+[Gg][Ii]498_Sages/[Ll]ibrary/
+GI498_Sages/Library/
 GI498_Sages/[Tt]emp/
 GI498_Sages/[Oo]bj/
 GI498_Sages/[Bb]uild/
@@ -107,4 +109,10 @@ GI498_Sages/Library/ArtifactDB
 GI498_Sages/Library/CurrentLayout-default.dwlt
 GI498_Sages/Library/LastSceneManagerSetup.txt
 GI498_Sages/Library/SceneVisibilityState.asset
+GI498_Sages/Library/SourceAssetDB
+GI498_Sages/Library/ArtifactDB
+GI498_Sages/Library/PackageManager/ProjectCache
+GI498_Sages/Library/PackageManager/ProjectCache.md5
+GI498_Sages/Library/SceneVisibilityState.asset
+GI498_Sages/Library/ShaderCache/EditorEncounteredVariants
 GI498_Sages/Library/SourceAssetDB
