Update Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-GI498_Sages/[Ll]ibrary/
-GI498_Sages/[Tt]emp/
-GI498_Sages/[Oo]bj/
-GI498_Sages/[Bb]uild/
-GI498_Sages/[Bb]uilds/
-GI498_Sages/[Ll]ogs/
-GI498_Sages/[Uu]ser[Ss]ettings/
+/GI498_Sages/[Ll]ibrary/
+/GI498_Sages/[Tt]emp/
+/GI498_Sages/[Oo]bj/
+/GI498_Sages/[Bb]uild/
+/GI498_Sages/[Bb]uilds/
+/GI498_Sages/[Ll]ogs/
+/GI498_Sages/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
